# Microsoft365-Agent-Scanner

./: .env.example  .gitattributes  .gitignore  M365 Copilot MCP Scanner.docx  README.md  pyproject.toml  test_mcp_1.yaml
docs/: tenant-setup.md  ui-prd.md  ui-trd.md
docs/decisions/: 0001-power-platform-management-app-in-wizard.md  0003-msal-and-direct-graph.md  0004-dataverse-app-user-automation.md  wizard-flow.md  wizard-perf-notes.md
scans/: 2026-05-08T07-27-50_4a9b42b1.json  2026-05-08T07-29-18_2c6e27c6.json  2026-05-08T07-30-04_27242b25.json  2026-05-08T08-03-47_2ba4bf37.json  latest.json
scripts/: setup-scanner.sh  test-setup-scanner-args.sh
src/m365_mcp_scanner/: config.py
src/m365_mcp_scanner/auth/: __init__.py  delegated_signin.py  doctor.py  file_cache.py  keyring_cache.py  msal_bootstrap.py  msal_broker.py  token_provider.py
src/m365_mcp_scanner/cli/: __init__.py  main.py
src/m365_mcp_scanner/clients/: __init__.py  api_recorder.py  base.py  dataverse.py  declarative_resolver.py  exceptions.py  graph.py  (+1 more)
tests/: conftest.py
tests/integration/: test_copilot_studio_e2e.py  test_custom_connectors_e2e.py  test_declarative_packages_e2e.py  test_declarative_teamsapp_e2e.py  test_phase1_e2e.py
tests/unit/: test_cli_doctor.py  test_cli_run_probe.py  test_config.py  test_copilot_studio_fingerprint.py  test_declarative_resolver.py  test_delegated_token_provider.py  test_diff.py  test_doctor.py  test_extract_mcp_paths.py  test_file_cache.py  test_graph_manifest_errors.py  test_ids.py  test_power_platform_admin_client.py  test_scan_index.py
(+78 files in other folders)
