[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m365-mcp-scanner"
version = "0.1.0"
description = "CLI scanner that discovers MCP server usage across a Microsoft 365 tenant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Theoremlabs" }]
dependencies = [
    "httpx>=0.27",
    "msal>=1.28",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
]

[project.scripts]
mcp-scan = "m365_mcp_scanner.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/m365_mcp_scanner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/m365_mcp_scanner"]
plugins = ["pydantic.mypy"]
